--- a/docker-compose/withPostgres/.env
+++ b/docker-compose/withPostgres/.env
@@ -1,6 +1,6 @@
-POSTGRES_USER=changeUser
-POSTGRES_PASSWORD=changePassword
+POSTGRES_USER=amarouane
+POSTGRES_PASSWORD=amarouanePassword
 POSTGRES_DB=n8n
 
-POSTGRES_NON_ROOT_USER=changeUser
-POSTGRES_NON_ROOT_PASSWORD=changePassword
+POSTGRES_NON_ROOT_USER=amarouane_user
+POSTGRES_NON_ROOT_PASSWORD=amarouane_userPassword
