--- a/docker-compose/withPostgres/docker-compose.yml
+++ b/docker-compose/withPostgres/docker-compose.yml
@@ -1,8 +1,7 @@
-version: '3.8'
-
 volumes:
-  db_storage:
-  n8n_storage:
+  db_local_storage:
+  n8n_local_storage:
+  ollama_local_storage:
 
 services:
   postgres:
@@ -15,7 +14,7 @@ services:
       - POSTGRES_NON_ROOT_USER
       - POSTGRES_NON_ROOT_PASSWORD
     volumes:
-      - db_storage:/var/lib/postgresql/data
+      - db_local_storage:/var/lib/postgresql/data
       - ./init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -h localhost -U ${POSTGRES_USER} -d ${POSTGRES_DB}']
@@ -23,8 +22,25 @@ services:
       timeout: 5s
       retries: 10
 
+  
+  go-mcp:
+    build: go-mcp
+    ports:
+      - "8000:8000"
+  
+  mcp-server:
+    image: mcp-server:v1.0.0
+  sde-data-agent:
+    image: ghcr.io/astral-sh/uv:debian
+    entrypoint: "tail -f /dev/null"
+
+  local-ollama:
+    image: ollama/ollama:latest
+    volumes:
+      - ollama_local_storage:/root/.ollama/models  
+  
   n8n:
-    image: docker.n8n.io/n8nio/n8n
+    image: n8nio/n8n:latest
     restart: always
     environment:
       - DB_TYPE=postgresdb
@@ -38,7 +54,7 @@ services:
     links:
       - postgres
     volumes:
-      - n8n_storage:/home/node/.n8n
+      - n8n_local_storage:/home/node/.n8n
     depends_on:
       postgres:
         condition: service_healthy
